--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "repository": "git@github.com:Cerbes/ATXdivHack-VR.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "server": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
@@ -32,6 +33,7 @@
     "aframe-react": "^4.3.0",
     "babel-preset-stage-1": "^6.1.18",
     "css-loader": "^0.28.7",
+    "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "lodash": "^4.17.4",
     "react": "^0.14.3",
